Resolve #1: new configuration field `commonLibs`

--- a/components/test/sample.cfg
+++ b/components/test/sample.cfg
@@ -28,6 +28,7 @@ startWait = 3
 sysUser = tcore, root
 kdbUser = username
 kdbPassword = p@ssw0rd
+commonLibs = clA
 
    [[core.hdb]]
    type = q:hdb
