Fix: missing unit tests assert

--- a/components/test/sample.cfg
+++ b/components/test/sample.cfg
@@ -71,3 +71,4 @@ basePort = 16000
    [[cep.python]]           				# non-q component definition
    type = cmd
    command = python
+   silent = True
